# TuneAI

./: .gitignore  CLAUDE.md  Makefile  README.md  TuneAI_完整执行方案.md  config.example.json  ocr.md  pyproject.toml  requirements.txt  run.py  项目介绍.md
.claude/: pua-loop.local.md  settings.local.json
backend/: run.py
backend/tuneai/: __init__.py  config.py  logging_config.py  main.py
backend/tuneai/api/: dependencies.py  routes.py
backend/tuneai/core/: __init__.py  filter.py  layout.py  llm.py  llm_client.py  music.py  ocr.py  parser.py  pitch_adjust.py  preprocess.py  qwen_vl.py  render.py  storage.py  symbols.py  task_manager.py  validate.py  vision_llm.py
backend/tuneai/schemas/: __init__.py  request_response.py  score_ir.py
docs/: LLM_VL_OCR_Provider_Comparison.md  TuneAI_完整执行方案.md  jianpu-ly简谱生成可行性评估报告.md  music21转调可行性评估报告.md  架构评审_P10_20250324.md  项目介绍.md  项目架构与模块说明.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.scss
frontend/src/components/: AIBadge.tsx  ControlBar.tsx  DownloadPanel.tsx  Dropzone.tsx  FullscreenImage.tsx  Header.tsx  InputPanel.tsx  LoadingState.tsx  OutputPanel.tsx  ResultSection.tsx  ResultViewer.tsx  ScoreView.tsx  TechBackground.tsx  Upload.tsx
frontend/src/hooks/: useTranspose.test.ts  (+1 more)
frontend/templates/: index.html  result.html
tests/: conftest.py  test_api.py  test_llm.py  test_music.py  test_ocr.py  test_pipeline.py
tests/adapters/: test_llm.py  test_ocr.py  test_vision.py
tests/api/: test_api.py
tests/application/: test_pipeline.py
tests/config/: test_config.py
tests/domain/: test_filter.py  test_music.py  test_preprocess.py  test_render.py  test_validate.py
tests/infra/: test_storage.py
(+38 files in other folders)
